
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int signal_user_data_t ;
typedef int gchar ;
typedef int GhbValue ;
typedef int GhbDictIter ;


 int * ghb_dict_get_value (int *,int const*) ;
 int ghb_dict_iter_init (int *) ;
 scalar_t__ ghb_dict_iter_next (int *,int *,int const**,int **) ;
 int ghb_ui_settings_update (int *,int *,int const*,int *) ;
 int * ghb_value_dup (int *) ;
 int ghb_value_free (int **) ;
 int ** widget_priority_list ;

void
ghb_settings_to_ui(signal_user_data_t *ud, GhbValue *dict)
{
    GhbDictIter iter;
    const gchar *key;
    GhbValue *gval;
    int ii;
    GhbValue *tmp = ghb_value_dup(dict);

    if (dict == ((void*)0))
        return;

    for (ii = 0; widget_priority_list[ii] != ((void*)0); ii++)
    {
        key = widget_priority_list[ii];
        gval = ghb_dict_get_value(tmp, key);
        if (gval != ((void*)0))
            ghb_ui_settings_update(ud, dict, key, gval);
    }

    iter = ghb_dict_iter_init(tmp);


    while (ghb_dict_iter_next(tmp, &iter, &key, &gval))
    {
        ghb_ui_settings_update(ud, dict, key, gval);
    }
    ghb_value_free(&tmp);
}
