; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_presets.c_ghb_settings_to_ui.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_presets.c_ghb_settings_to_ui.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@widget_priority_list = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ghb_settings_to_ui(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32* @ghb_value_dup(i32* %10)
  store i32* %11, i32** %9, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  br label %59

15:                                               ; preds = %2
  store i32 0, i32* %8, align 4
  br label %16

16:                                               ; preds = %41, %15
  %17 = load i32**, i32*** @widget_priority_list, align 8
  %18 = load i32, i32* %8, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i32*, i32** %17, i64 %19
  %21 = load i32*, i32** %20, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %23, label %44

23:                                               ; preds = %16
  %24 = load i32**, i32*** @widget_priority_list, align 8
  %25 = load i32, i32* %8, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32*, i32** %24, i64 %26
  %28 = load i32*, i32** %27, align 8
  store i32* %28, i32** %6, align 8
  %29 = load i32*, i32** %9, align 8
  %30 = load i32*, i32** %6, align 8
  %31 = call i32* @ghb_dict_get_value(i32* %29, i32* %30)
  store i32* %31, i32** %7, align 8
  %32 = load i32*, i32** %7, align 8
  %33 = icmp ne i32* %32, null
  br i1 %33, label %34, label %40

34:                                               ; preds = %23
  %35 = load i32*, i32** %3, align 8
  %36 = load i32*, i32** %4, align 8
  %37 = load i32*, i32** %6, align 8
  %38 = load i32*, i32** %7, align 8
  %39 = call i32 @ghb_ui_settings_update(i32* %35, i32* %36, i32* %37, i32* %38)
  br label %40

40:                                               ; preds = %34, %23
  br label %41

41:                                               ; preds = %40
  %42 = load i32, i32* %8, align 4
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %8, align 4
  br label %16

44:                                               ; preds = %16
  %45 = load i32*, i32** %9, align 8
  %46 = call i32 @ghb_dict_iter_init(i32* %45)
  store i32 %46, i32* %5, align 4
  br label %47

47:                                               ; preds = %51, %44
  %48 = load i32*, i32** %9, align 8
  %49 = call i64 @ghb_dict_iter_next(i32* %48, i32* %5, i32** %6, i32** %7)
  %50 = icmp ne i64 %49, 0
  br i1 %50, label %51, label %57

51:                                               ; preds = %47
  %52 = load i32*, i32** %3, align 8
  %53 = load i32*, i32** %4, align 8
  %54 = load i32*, i32** %6, align 8
  %55 = load i32*, i32** %7, align 8
  %56 = call i32 @ghb_ui_settings_update(i32* %52, i32* %53, i32* %54, i32* %55)
  br label %47

57:                                               ; preds = %47
  %58 = call i32 @ghb_value_free(i32** %9)
  br label %59

59:                                               ; preds = %57, %14
  ret void
}

declare dso_local i32* @ghb_value_dup(i32*) #1

declare dso_local i32* @ghb_dict_get_value(i32*, i32*) #1

declare dso_local i32 @ghb_ui_settings_update(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @ghb_dict_iter_init(i32*) #1

declare dso_local i64 @ghb_dict_iter_next(i32*, i32*, i32**, i32**) #1

declare dso_local i32 @ghb_value_free(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
